tests/positive/rule5_vector_normalize.safe
-- Test: rule5_vector_normalize
-- Description: Vector scaling with a computed positive floating divisor.
--   The divisor is derived from all three components as 1.0 plus their sum,
--   so it is always finite, positive, and nonzero.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139:d50bc714
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139b:5e20032b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Expected: ACCEPT

package Safe_Vector_Normalize is

   type Component is digits 6 range 0.0 .. 100.0;
   type Positive_Count is range 1 .. 4;
   type Vector3 is record
      X : Component;
      Y : Component;
      Z : Component;
   end record;

   function Normalize_X (Input : Vector3) return Float is
      Divisor : Positive_Count = 1;
   begin
      if Input.X > 0.0 then
         Divisor = Divisor + 1;
      end if;
      if Input.Y > 0.0 then
         Divisor = Divisor + 1;
      end if;
      if Input.Z > 0.0 then
         Divisor = Divisor + 1;
      end if;
      return Float (Input.X) / Float (Divisor);
   end Normalize_X;

end Safe_Vector_Normalize;
