tests/negative/neg_rule5_uninitialized.safe
-- Test: neg_rule5_uninitialized
-- Description: Uninitialized FP value used at a narrowing point.
--   A Long_Float variable is not initialized, so it may hold NaN or
--   any bit pattern. Using it at a narrowing point is not provably safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139c:7fad4f7d
-- Expected: REJECT fp_uninitialized_at_narrowing

package FP_Uninit_Test

   type Bounded is digits 6 range -100.0 to 100.0;

   --  Use_Uninit: declares X without initialization, then narrows.
   --  X may hold NaN, infinity, or any value. Not provably finite
   --  or within -100..100.
   function Use_Uninit returns Bounded
      X : Long_Float;

      return Bounded (X);  -- ERROR: X is uninitialized, may be NaN/infinity



